CSS/style.css
@import "./reset.css";

/******************** 
Variables 
*********************/
:root {
  /* Primary Colors */
  --soft-orange: hsl(35, 77%, 62%);
  --soft-red: hsl(5, 85%, 63%);
  --off-white: hsl(36, 100%, 99%);
  --grayish-blue: hsl(233, 8%, 79%);
  --dark-grayish-blue: hsl(236, 13%, 42%);
  --very-dark-blue: hsl(240, 100%, 5%);

  /* Font Sizes */
  --font-size-small: 0.8rem;
  --font-size-regular: 1rem;
  --font-size-title: 1.1rem;
  --font-size-large: 2rem;

  /* Font Weight */
  --font-bold: 800;

  /* Spacing */
  --spacing-small: 1rem;
  --spacing-medium: 2rem;
}

/*****************************
Mobile Styles - News Homepage
******************************/

/* Container Styles - 
Containers work with semantically related elements
for layout and styling purposes.
*/

.main-container {
  width: 90%;
  margin-inline: auto;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-block: var(--spacing-small);
}

.nav-links-lg-container {
  display: none;
}

.nav-links-sm-container {
  position: fixed;
  right: 0;
  top: 0;
  height: 100%;
  width: 70%;
  background-color: #fff;
  overflow: auto;
  transition: transform 0.3s ease-in-out;
  transform: translateX(100%);
}

.nav-links-sm-container ul {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-small);
  margin: 5rem 0 0 2rem;
}

.mid-article-container {
  background-color: var(--very-dark-blue);
  color: var(--off-white);
  margin-block: var(--spacing-medium);
  padding: 1.5rem 1rem;
  line-height: 1.5;
  display: flex;
  flex-direction: column;
  gap: var(--spacing-medium);
}

.mid-article {
  border-bottom: 1px solid var(--dark-grayish-blue);
  padding-bottom: 1rem;
}

.bottom-article-container {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-medium);
  margin-block: var(--spacing-medium);
  margin-inline: auto;
}

.bottom-article {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Interactive Mobile Nav Styles */

.open-mobile-nav {
  transform: translateX(0);
}

#overlay {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: none;
}

/* Wrapper Styles - 
wrappers are used for layout and presentational reasons
as required by the project design guidelines. */

.logo-wrapper {
  height: 25px;
}

.top-img-wrapper {
  width: clamp(350px, 80%, 800px);
  height: clamp(200px, 50vh, 600px);
  margin-inline: auto;
}

.top-article-info-wrapper {
  padding-top: 0.5rem;
}

.bottom-img-wrapper {
  height: 100%;
  width: fit-content;
}

.bottom-article-info-wrapper {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: end;
  gap: 0.5rem;
  width: 100%;
}

/* Image Styles */

.logo-img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.top-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.bottom-img {
  width: 130px;
  height: 130px;
  object-fit: contain;
}

/* Button Styles */

.btn {
  background: transparent;
  border: 0;
}

.close-btn {
  position: absolute;
  top: var(--spacing-medium);
  right: var(--spacing-medium);
}

.read-btn {
  background-color: var(--soft-red);
  color: var(--off-white);
  padding: 0.8rem var(--spacing-small);
  margin-top: var(--spacing-small);
  font-size: var(--font-size-small);
  letter-spacing: 4px;
  font-weight: var(--font-bold);
}

.read-btn a {
  color: var(--off-white);
}

.btn:hover {
  cursor: pointer;
}

/* Text and Title Font Styles */

.top-title {
  font-size: 2.2rem;
  font-weight: var(--font-bold);
}

.top-article-info {
  font-size: var(--font-size-regular);
  color: var(--dark-grayish-blue);
  line-height: 1.5;
}

.nav-container a {
  color: var(--dark-grayish-blue);
  font-size: var(--font-size-regular);
}

.mid-main-title {
  color: var(--soft-orange);
}

.mid-article-title {
  font-size: var(--font-size-title);
}

.bottom-article-number {
  font-size: var(--font-size-large);
  font-weight: var(--font-bold);
  color: var(--grayish-blue);
}

.bottom-article-title {
  font-size: var(--font-size-regular);
  font-weight: var(--font-bold);
  color: var(--very-dark-blue);
}

.mid-article-text {
  color: var(--grayish-blue);
  font-size: var(--font-size-regular);
}

.bottom-article-text {
  font-size: var(--font-size-small);
  color: var(--dark-grayish-blue);
}

/***************************************************
Tablet Styles - News Homepage - Media Queries Start
****************************************************/

@media (min-width: 768px) {
  .main-container {
    width: 70%;
  }

  .nav-links-lg-container {
    display: flex;
    gap: var(--spacing-medium);
  }

  .nav-links-sm-container {
    display: none;
  }

  .bottom-article-container {
    width: 60%;
  }

  .top-img-wrapper {
    width: 100%;
    height: 100%;
  }

  .hamburger-btn {
    display: none;
  }
}

/***************************************************
Desktop Styles - News Homepage - Min Width 1024px
****************************************************/

@media screen and (min-width: 1024px) {
  .main-container {
    width: 95%;
    height: max-content;
  }

  .nav-container {
    margin-top: var(--spacing-medium);
  }

  .top-article-container {
    grid-column: 1 / 6;
    grid-row: 1 / 2;
    height: 60%;
    margin-top: var(--spacing-medium);
  }

  .mid-article-container {
    grid-column: 6 / 9;
    grid-row: 1 / 2;
    height: min-content;
  }

  .bottom-article-container {
    flex-direction: row;
    width: 100%;
    grid-column: 1 / 9;
    grid-row: 2 / 3;
    height: min-content;
    margin-top: -1rem;
  }
  .content-grid-wrapper {
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: repeat(1, 1fr);
    gap: var(--spacing-small);
    margin-top: -1rem;
  }

  .top-article-info-wrapper {
    padding-right: var(--spacing-medium);
    width: 60%;
  }

  .top-article {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: var(--spacing-small);
  }

  .mid-article-text {
    font-size: var(--font-size-small);
  }

  .top-title {
    font-size: 2.5rem;
    width: 40%;
  }

  .top-article-info {
    font-size: var(--font-size-regular);
    line-height: 1.5;
  }

  .mid-main-title {
    font-size: var(--font-size-large);
  }

  .read-btn {
    font-size: var(--font-size-regular);
    padding: 0.5rem var(--spacing-medium);
  }

  .bottom-img {
    width: 120px;
    height: 120px;
  }
}

/***************************************************
Desktop Styles - News Homepage - Min Width 1440px
****************************************************/

@media screen and (min-width: 1440px) {
  .main-container {
    width: 90%;
  }

  .top-article-container {
    grid-column: 1 / 7;
  }

  .mid-article-container {
    grid-column: 7 / 9;
  }

  .bottom-article-container {
    margin-top: -1rem;
    width: 100%;
    justify-content: space-between;
  }

  .logo-wrapper {
    height: 40px;
  }

  .top-article-info-wrapper {
    padding-left: var(--spacing-medium);
    margin-bottom: var(--spacing-medium);
  }

  .content-grid-wrapper {
    margin-top: -1rem;
  }

  .bottom-article-info-wrapper {
    gap: var(--spacing-small);
  }

  .bottom-img {
    width: 130px;
    height: 130px;
  }

  .top-title {
    font-size: 2.8rem;
    margin-top: -1rem;
  }
}

